--- a/IM Front end/index.html
+++ b/IM Front end/index.html
@@ -54,7 +54,7 @@
                 <ul class="navbar-nav">
                     <li class="navbar-nav">
                         <div class="text-muted small fw-bold text-uppercase px-3 my-2">
-                            CORE
+                            ADMIN
                         </div>
                     </li>
 
@@ -67,9 +67,40 @@
 
                     <li>
                         <a href="#" class="nav-link ps-3" active>
+                            <span class="me-2"><i class="bi bi-receipt-cutoff"></i></span>
+                            <span>POS</span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a class="nav-link px-3 sidebar-link" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                             <span class="me-2"><i class="bi bi-clipboard2-minus"></i></span>
                             <span>Inventory</span>
-                        </a>
+                            <span class="right-icon ms-auto"><i class="bi bi-chevron-down"></i></span>
+                          </a>
+
+                          <div class="collapse" id="collapseExample">
+                            <div>
+                                <ul class="navbar-nav ps-3">
+                                    <li>
+                                        <a href="#" class="nav-link px-3">
+                                            <span class="me-2"></span>
+                                            <span>Store</span>
+                                        </a>
+                                    </li>
+                                </ul>
+
+                                <ul class="navbar-nav ps-3">
+                                    <li>
+                                        <a href="#" class="nav-link px-3">
+                                            <span class="me-2"></span>
+                                            <span>Warehouse</span>
+                                        </a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                          </div>
                     </li>
 
                     <li class="my-3">
